[package]
name = "roguelike_test"
version = "0.1.0"
authors = ["JimSchrute <salvadorlima101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.0", features = ["specs-derive"] }

[dependencies.rltk]
path = "../rltk_rs"
# git = "https://github.com/thebracket/rltk_rs"
# rev = "1c281a1d5afbc3ff8cdc16f9a1e7e199b02ab642"
